--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,10 @@ button {
 
 /* Header section */
 .header {
+  position: sticky;
+  top: -1px;
+  background-color: #fff;
+  z-index: 100;
 }
 .header-container {
   display: flex;
@@ -124,6 +128,7 @@ button {
 .header-item {
 }
 .header-link {
+  position: relative;
   display: block;
   padding: 32px 0;
   font-size: 14px;
@@ -135,6 +140,18 @@ button {
 .header-link:focus  {
   color: #FD9222;
 }  
+
+.header-link::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #FD9222;
+}
 .socials {
   display: flex;
   align-items: center;
@@ -188,6 +205,7 @@ button {
   border-radius: 100px;
   padding: 14px 40px;
   border: 1px solid transparent;
+  transition:  color 300ms ease-in-out, background-color 300ms ease-in-out;
 }
 .hero-btn.primary {
   color: #fff;
@@ -216,19 +234,27 @@ button {
   letter-spacing: -0.03em;
   color: #fff;
   background-color: transparent;
+  transition:  color 300ms ease-in-out;
 }
 .hero-scroll:hover,
 .hero-scroll:focus {
   color: #FD9222;
 }
-.circle {
+.hero-icon {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 38px;
   height: 38px;
   border-radius: 50%;
+  color: #FD9222;
   background-color: #fff;
+  transition:  color 300ms ease-in-out, background-color 300ms ease-in-out;
+}
+.hero-scroll:hover .hero-icon,
+.hero-scroll:focus .hero-icon {
+  color: #fff;
+  background-color: #FD9222;
 }
 /* Features section */
 .features {
