--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   color: #111;
   background-color: #FAFAFA;
+  
 }
 h1,
 h2,
@@ -161,6 +162,22 @@ button {
   gap: 14px;
 }
 .socials-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  color: #111;
+  border-radius: 10px;
+  border: 1px solid rgba(17, 17, 17, 0,1);
+  
+  transition:  color 300ms ease-in-out, background-color 300ms ease-in-out;
+}
+.socials-link:hover,
+.socials-link:focus {
+  color: #FD9222;
+  border-color: rgba(253, 146, 34, 0.1);
+
 }
 .socials-icon {
 }
@@ -227,6 +244,7 @@ button {
 .hero-scroll {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 14px;
   font-weight: 500;
   font-size: 14px;
@@ -250,6 +268,12 @@ button {
   color: #FD9222;
   background-color: #fff;
   transition:  color 300ms ease-in-out, background-color 300ms ease-in-out;
+}
+.hero-icon use {
+  width: 22px; /* Встановлюємо розміри іконки */
+  height: 22px;
+  display: block;
+  margin: auto;
 }
 .hero-scroll:hover .hero-icon,
 .hero-scroll:focus .hero-icon {
@@ -471,12 +495,11 @@ button {
   border: 1px solid rgba(17, 17, 17, 0.1);
   width: calc((100% - 16px * 2) / 3);
   box-sizing: border-box;
-  overflow: hidden;
 
 }
 .bestsellers-wrapper {
   position: relative;
- 
+  overflow: hidden;
 }
 .bestseller-img {
 
@@ -487,7 +510,6 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -498,6 +520,14 @@ button {
   padding: 40px;
   backdrop-filter: blur(8px);
   background: linear-gradient(161deg, rgba(253, 253, 255, 0.1) 4%, rgba(8, 2, 21, 0.1) 110%);
+
+  transform: translateY(100%);
+  transition: transform 500ms ease-in;
+}
+
+.bestseller-item:hover
+.overlay {
+  transform: translateY(0);
 }
 .bestseller-desc {
   font-weight: 600;
@@ -559,13 +589,16 @@ button {
   color: rgba(17, 17, 17, 0.7);
 }
 .review-btn {
+  display: block;
   border: 1px solid #FD9222;
   border-radius: 100px;
   padding: 14px 40px;
   width: 222px;
   height: 50px;
-  margin-top: 50px;
-  margin-bottom: 60px;
+  margin: 50px auto 60px;
+  /* margin-top: 50px;
+  margin-bottom: 60px; */
+
  
 }
 /* Footer section */
@@ -573,10 +606,14 @@ button {
   background-color: #1E1823;
   color: #FAFAFA;
 }
-.main-part-footer {
+.footer-top {
   display: flex;
+  padding-bottom: 50px;
+  border-bottom: 1px solid rgba(253, 253, 255, 0.1);
 }
-
+.social-footer {
+  margin: 0 auto;
+}
 .footer-slogan {
 }
 .footer-caption {
@@ -592,6 +629,9 @@ button {
 }
 .footer-address-link {
 }
+.footer-bottom {
+ 
+}
 .footer-menu {
   display: flex;
   flex-wrap: wrap;
@@ -605,4 +645,78 @@ button {
   padding-bottom: 50px;
 }
 .footer-menu-link {
+}
+
+
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100vw;
+  height: 100vh;
+
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 300ms ease-in, visibility 300ms ease-in;
+  opacity: 0;
+  visibility: hidden; 
+  z-index: 1000;
+}
+ .backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+
+
+
+.modal {
+  position: relative;
+  width: 517px;
+  min-height: 794px;
+  padding: 24px;
+  padding-top: 72px;
+  border-radius: 15px;
+  background: #fafafa;
+}
+.modal-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  margin-left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 28px;
+  min-height: 28px;
+  color: #111;
+}
+.modal-btn-icon {
+  stroke: currentColor;
+}
+.modal-caption {
+  width: 298px;
+  margin-top: 24px;
+  margin-bottom: 40px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+
+}
+
+button [type="submit"] {
+  margin-top: 20px;
+  background-color: grey;
+  pad: 12px 18px;
+  border-radius: 10px;
+  color: #fff;
+
 }
